added time slots to html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,197 @@
             </div>
         </div>
 
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    10AM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
 
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    11AM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    12PM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    1PM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    2PM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    3PM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    4PM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="row no-gutters">
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                    5PM
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="card">
+                    <h4 class="">
+                    enter tasks here using form
+                    </h4>
+                </div>
+            </div>
+            <div class="col-xs">
+                <div class="card">
+                    <h4 class="">
+                        <span class="oi oi-check"></span>
+                    </h4>
+                </div>
+            </div>
+        </div>
 
     </div>
 
