--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
     <div class="container">
       <!-- Timeblocks go here -->
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     9AM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
-                    <h4 class="">
+                    <form class="">
                     enter tasks here using form
-                    </h4>
+                    </form>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -57,21 +57,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     10AM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -81,21 +81,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     11AM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -105,21 +105,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     12PM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -129,21 +129,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     1PM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -153,21 +153,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     2PM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -177,21 +177,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     3PM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -201,21 +201,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     4PM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -225,21 +225,21 @@
         </div>
 
         <div class="row no-gutters">
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                     5PM
                     </h4>
                 </div>
             </div>
-            <div class="col-md-8">
+            <div class="col-8">
                 <div class="card">
                     <h4 class="">
                     enter tasks here using form
                     </h4>
                 </div>
             </div>
-            <div class="col-xs">
+            <div class="col-2">
                 <div class="card">
                     <h4 class="">
                         <span class="oi oi-check"></span>
@@ -247,6 +247,8 @@
                 </div>
             </div>
         </div>
+
+        
 
     </div>
 
