--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -27,230 +26,13 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentDay" class="lead"><span id="nowTime"></span></p>
     </header>
-
-    <div class="container">
-      <!-- Timeblocks go here -->
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    9AM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <form class="">
-                    enter tasks here using form
-                    </form>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    10AM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    11AM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    12PM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    1PM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    2PM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    3PM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    4PM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="row no-gutters">
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                    5PM
-                    </h4>
-                </div>
-            </div>
-            <div class="col-8">
-                <div class="card">
-                    <h4 class="">
-                    enter tasks here using form
-                    </h4>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="card">
-                    <h4 class="">
-                        <span class="oi oi-check"></span>
-                    </h4>
-                </div>
-            </div>
-        </div>
-
-        
-
-    </div>
+    <main class="background">
+      <div class="container">
+        <!-- Timeblocks go here -->
+      </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
